RESOLVED FIXED231075
Attribute IOSurfaces created by camera and decoders to responsible WebProcess
https://bugs.webkit.org/show_bug.cgi?id=231075
Summary Attribute IOSurfaces created by camera and decoders to responsible WebProcess
youenn fablet
Reported 2021-10-01 06:11:18 PDT
Attribute IOSurfaces created by camera and decoders to responsible WebProcess
Attachments
Patch (10.66 KB, patch)
2021-10-01 06:17 PDT, youenn fablet
no flags
Build fix (3.42 KB, patch)
2021-10-03 14:58 PDT, David Kilzer (:ddkilzer)
no flags
youenn fablet
Comment 1 2021-10-01 06:17:40 PDT
EWS
Comment 2 2021-10-01 08:34:28 PDT
Committed r283369 (242378@main): <https://commits.webkit.org/242378@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439847 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-01 08:35:19 PDT
David Kilzer (:ddkilzer)
Comment 4 2021-10-03 14:40:51 PDT
(In reply to EWS from comment #2) > Committed r283369 (242378@main): <https://commits.webkit.org/242378@main> > > All reviewed patches have been landed. Closing bug and clearing flags on > attachment 439847 [details]. After the build failure from Bug X was fixed, I think (not 100% sure) this change is now causing a different build failure: ./platform/graphics/cocoa/IOSurface.mm:491:76: error: use of undeclared identifier 'kIOSurfaceMemoryLedgerTagGraphics' <https://build.webkit.org/#/builders/275/builds/117> It's the only recent change that uses HAVE(IOSURFACE_SET_OWNERSHIP_IDENTITY), as kIOSurfaceMemoryLedgerTagGraphics was added for Bug 220770 in r271673 last January.
David Kilzer (:ddkilzer)
Comment 5 2021-10-03 14:41:48 PDT
(In reply to David Kilzer (:ddkilzer) from comment #4) > (In reply to EWS from comment #2) > > Committed r283369 (242378@main): <https://commits.webkit.org/242378@main> > > > > All reviewed patches have been landed. Closing bug and clearing flags on > > attachment 439847 [details]. > > After the build failure from Bug X was fixed, And Bug X would be Bug 231034 and commit r283480.
David Kilzer (:ddkilzer)
Comment 6 2021-10-03 14:50:21 PDT
(In reply to David Kilzer (:ddkilzer) from comment #4) > (In reply to EWS from comment #2) > > Committed r283369 (242378@main): <https://commits.webkit.org/242378@main> > > > > All reviewed patches have been landed. Closing bug and clearing flags on > > attachment 439847 [details]. > > After the build failure from Bug X was fixed, I think (not 100% sure) this > change is now causing a different build failure: > > ./platform/graphics/cocoa/IOSurface.mm:491:76: error: use of undeclared > identifier 'kIOSurfaceMemoryLedgerTagGraphics' > > <https://build.webkit.org/#/builders/275/builds/117> > > It's the only recent change that uses > HAVE(IOSURFACE_SET_OWNERSHIP_IDENTITY), as kIOSurfaceMemoryLedgerTagGraphics > was added for Bug 220770 in r271673 last January. I have a fix.
David Kilzer (:ddkilzer)
Comment 7 2021-10-03 14:58:45 PDT
Reopening to attach new patch.
David Kilzer (:ddkilzer)
Comment 8 2021-10-03 14:58:47 PDT
Created attachment 440021 [details] Build fix
David Kilzer (:ddkilzer)
Comment 9 2021-10-03 14:59:18 PDT
Comment on attachment 440021 [details] Build fix Waiting to mark cq+ until iOS, tvOS and watchOS builds are successful.
David Kilzer (:ddkilzer)
Comment 10 2021-10-03 15:07:43 PDT
(In reply to David Kilzer (:ddkilzer) from comment #9) > Comment on attachment 440021 [details] > Build fix > > Waiting to mark cq+ until iOS, tvOS and watchOS builds are successful. Only the hardware builds need to succeed. The simulator builds aren't failing.
EWS
Comment 11 2021-10-03 16:03:42 PDT
Committed r283483 (242456@main): <https://commits.webkit.org/242456@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440021 [details].
Note You need to log in before you can comment on or make changes to this bug.