Attribute IOSurfaces created by camera and decoders to responsible WebProcess https://bugs.webkit.org/show_bug.cgi?id=231075

Reviewed by Chris Dumez.

Source/WebCore:

Manually tested.

* platform/graphics/RemoteVideoSample.h:

Source/WebKit:

Make sure to mark camera and decoder generated IOSurfaces as owned by the responsible WebProcess.

* GPUProcess/GPUConnectionToWebProcess.cpp:
* GPUProcess/webrtc/LibWebRTCCodecsProxy.mm:
* UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
* UIProcess/Cocoa/UserMediaCaptureManagerProxy.h:


Canonical link: https://commits.webkit.org/242378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283369 268f45cc-cd09-0410-ab3c-d52691b4dbfc